angular: fix filter panel icon wrap issue
^fox-60012

(cherry picked from commit 3caaeb9b6c63d0a5ccff52c8c3ccfee65c6d2ee0)

--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -68,6 +68,8 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
+      line-height: 1.5rem;
+      padding-bottom: 5px;
       a.text-break {
         flex: 1 0 50%;
       }
